feat: add ForEachStmt AST support + J009 infinite loop detection rule